front: initial styles applied for upload book page, added custom radio btn and z-index fixed through the components

--- a/client/src/styles/auth.scss
+++ b/client/src/styles/auth.scss
@@ -113,12 +113,13 @@ form {
     position: relative;
   }
 
-  input {
+  input, textarea {
     border: 0.1rem solid rgb(0, 0, 0);
     padding: 1rem;
     border-radius: 1rem;
     width: 100%;
     min-width: 20rem;
+    background: none;
   }
   .toggle-password,
   .toggle-confirmed-password {
